--- a/radiance-app/public/index.html
+++ b/radiance-app/public/index.html
@@ -8,7 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif::100,300,400,500,700,900" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
